fixed header position on mobile

--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -155,7 +155,12 @@ section {
 }
 
 @media (max-width: 768px) {
+  h1 {
+    text-align: center;
+  }
+
   #button-back {
-    top: 80px;
+    top: 10px;
+    left: 10px;
   }
 }
